--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="./css/styles.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <title>TIENDA 3.0</title>
+    <title>GB SHOP</title>
   </head>
   <body>
     <header class="Header-principal" id="header"><img class="header-logo" src="./images/logo.png" alt="Logo"/>
