previwe add to images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="Header-principal" id="header"><img class="header-logo" src="./images/logo.png" alt="Logo"/>
       <h1>Garbage Shop</h1>
       <ul class="header__nav-menu"><a href="cart.html"><i class="material-icons md-36" id="cart-icon">add_shopping_cart</i></a>
-        <li>productos
+        <li>products
           <p id="conteo-productos">0</p>
         </li>
         <li>total 
