css modularizado + responsive

--- a/cart.html
+++ b/cart.html
@@ -8,8 +8,8 @@
     <title>CART</title>
   </head>
   <body>
-    <header class="Header" id="header"><img class="header-logo" src="./images/logo.png" alt="Logo"/>
-      <h1>Garbage Shop</h1>
+    <header class="Header" id="header"><img class="header-logo" src="./assets/logo.png" alt="Logo"/>
+      <h1 class="hidden" id="dsaldksa">Garbage Shop</h1>
       <button><a class="back-button" href="index.html">BACK</a></button>
     </header>
     <main class="Main">
@@ -20,11 +20,11 @@
       </section>
     </main>
     <footer id="fto">
-      <p class="autor">Diseñado por JohánSQ</p>
+      <p class="autor hidden">Diseñado por JohánSQ</p>
       <ul class="rrss">
-        <li class="github"><a href="https://github.com/JohanSuarezQ/" target="_blank"><img src="./images/github.svg" alt="link-github"/></a></li>
-        <li class="linkedin"><a href="https://www.linkedin.com/in/johansq/" target="_blank"><img src="./images/linkedin.svg" alt="link-linkedin"/></a></li>
-        <li class="instagram"><a href="https://www.instagram.com/johansuarezq/" target="_blank"><img src="./images/instagram.svg" alt="link-instagram"/></a></li>
+        <li class="github"><a href="https://github.com/JohanSuarezQ/" target="_blank"><img src="./assets/github.svg" alt="link-github"/></a></li>
+        <li class="linkedin"><a href="https://www.linkedin.com/in/johansq/" target="_blank"><img src="./assets/linkedin.svg" alt="link-linkedin"/></a></li>
+        <li class="instagram"><a href="https://www.instagram.com/johansuarezq/" target="_blank"><img src="./assets/instagram.svg" alt="link-instagram"/></a></li>
       </ul>
     </footer>
   </body>
