--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>GB SHOP</title>
   </head>
   <body>
-    <header class="Header-principal" id="header"><img class="header-logo" src="./images/logo.png" alt="Logo"/>
-      <h1>Garbage Shop</h1>
+    <header class="Header-principal" id="header"><img class="header-logo" src="./assets/logo.png" alt="Logo"/>
+      <h1 class="hidden" id="hola">Garbage Shop</h1>
       <ul class="header__nav-menu"><a href="cart.html"><i class="material-icons md-36" id="cart-icon">add_shopping_cart</i></a>
-        <li>products
+        <li class="hidden">products
           <p id="conteo-productos">0</p>
         </li>
         <li>total 
@@ -24,11 +24,11 @@
       <ul class="store" id="store"></ul>
     </main>
     <footer>
-      <p class="autor">Diseñado por JohánSQ</p>
+      <p class="autor hidden">Diseñado por JohánSQ</p>
       <ul class="rrss">
-        <li class="github"><a href="https://github.com/JohanSuarezQ/" target="_blank"><img src="./images/github.svg" alt="link-github"/></a></li>
-        <li class="linkedin"><a href="https://www.linkedin.com/in/johansq/" target="_blank"><img src="./images/linkedin.svg" alt="link-linkedin"/></a></li>
-        <li class="instagram"><a href="https://www.instagram.com/johansuarezq/" target="_blank"><img src="./images/instagram.svg" alt="link-instagram"/></a></li>
+        <li class="github"><a href="https://github.com/JohanSuarezQ/" target="_blank"><img src="./assets/github.svg" alt="link-github"/></a></li>
+        <li class="linkedin"><a href="https://www.linkedin.com/in/johansq/" target="_blank"><img src="./assets/linkedin.svg" alt="link-linkedin"/></a></li>
+        <li class="instagram"><a href="https://www.instagram.com/johansuarezq/" target="_blank"><img src="./assets/instagram.svg" alt="link-instagram"/></a></li>
       </ul>
     </footer>
   </body>
